tests/e2e/keystone/network-policy/01-patch-update-ingress.yaml
# SPDX-FileCopyrightText: Copyright 2026 SAP SE or an SAP affiliate company
#
# SPDX-License-Identifier: Apache-2.0

# Patch to update ingress sources — add a second source.
apiVersion: keystone.openstack.c5c3.io/v1alpha1
kind: Keystone
metadata:
  name: keystone-netpol
  namespace: openstack
spec:
  networkPolicy:
    ingress:
    - namespaceSelector:
        kubernetes.io/metadata.name: envoy-gateway-system
    - namespaceSelector:
        kubernetes.io/metadata.name: monitoring
