tests/e2e/keystone/network-policy/02-patch-disable-networkpolicy.yaml
# SPDX-FileCopyrightText: Copyright 2026 SAP SE or an SAP affiliate company
#
# SPDX-License-Identifier: Apache-2.0

# Patch to disable networkPolicy by removing the networkPolicy field (CC-0039).
# Chainsaw merge-patches with this manifest, setting networkPolicy to null.
apiVersion: keystone.openstack.c5c3.io/v1alpha1
kind: Keystone
metadata:
  name: keystone-netpol
  namespace: openstack
spec:
  networkPolicy: null
